# Letmesign

./: Cargo.toml  deploy.sh  deploy_to_vm.sh  first_half.rs  test_pkcs12.rs
app/docuseal/: App.tsx  package-lock.json  package.json  types.ts
app/docuseal/ConfigApi/: upstashService.ts
app/docuseal/components/: FoldersList.tsx  GoogleDriveManager.tsx  GoogleDrivePicker.tsx  InviteModal.tsx  Layout.tsx  Pagination.tsx  PdfDisplay.tsx  PdfViewer.tsx  README.md  SignatureRenderer.tsx  TwoFactorSetup.tsx  index.ts  updatePro.tsx
app/docuseal/contexts/: AuthContext.tsx
app/docuseal/hooks/: useGoogleDriveAutoOpen.ts  usePagination.ts  useUserSettings.ts
migrations/: 20250101000001_create_tables.sql  20250101000001_create_tables.sql.backup  20251117000001_create_email_templates_table.sql  20251202000001_create_certificates_table.sql  20251202000003_add_ca_support_to_certificates.sql  20251202120000_fix_certificates_timestamps.sql  20251203000001_add_decline_reason_to_submitters.sql  20251203000003_add_default_certificate_support.sql  20251204000001_add_is_ca_to_certificates.sql  20251205000001_add_two_factor_to_users.sql
src/: main.rs
src/common/: jwt.rs  mod.rs  two_factor.rs  utils.rs
src/database/: models.rs  queries.rs
src/models/: certificate.rs  mod.rs  signature.rs  submitter.rs  template.rs  user.rs
src/routes/: email_templates.rs  mod.rs  pdf_preferences.rs  pdf_signature.rs  pdf_signature_helper.rs  pdf_signature_old.rs  submissions.rs  submitters.rs  templates.rs  web.rs
src/services/: digital_signature.rs  email.rs  filename_formatter.rs  mod.rs  pdf_preferences.rs  reminder_queue.rs  storage.rs
test_certificates/: TEST_BANG_TAY.md  external_certificate.p12  test_certificate.p12
(+55 files in other folders)
