[package]
name = "letmesign"
version = "0.1.0"
edition = "2021"
default-run = "letmesign"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
bcrypt = "0.17.1"
pdf-extract = "0.7"
lopdf = "0.32"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
futures = "0.3"
axum-extra = { version = "0.9", features = ["multipart", "query"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
base64 = "0.21"
lettre = { version = "0.11.18", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"], default-features = false }
bytes = "1.0"
urlencoding = "2.1"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
ab_glyph = "0.2.32"
totp-rs = { version = "5.4", features = ["qr"] }
anyhow = "1.0"
base32 = "0.5.1"
md5 = "0.7"
x509-parser = "0.16"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
cms = "0.2"
x509-cert = "0.2"
rsa = "0.9"
pkcs8 = "0.10"
der = "0.7"
spki = "0.7"
